# rps-distributed-optimization

./: .gitignore  CHANGELOG.md  CITATION.cff  IMPLEMENTATION_NOTES.md  LICENSE  README.md  baselines.py  config.py  costs.py  datasets.py  distributed_optimization.py  expected_results.json  expected_results_full.json  experiments.py  figures.py  main.py  pyproject.toml  requirements.txt  rps_diagnosis.py  statistics_utils.py  verify_assumptions.py
.github/workflows/: ci.yml
tests/: conftest.py  test_combination_rules.py  test_compute_pmf.py  test_config_validation.py  test_detection_metrics.py  test_distributed_optimization.py  test_documentation_language.py  test_figure5_packet_loss.py  test_fusion_strategies.py  test_paper_core_claim.py  test_pmf.py  test_reproducibility.py  test_run_optimization.py  test_smoke_pipeline.py  test_statistics.py  test_tau_calibration.py
