[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rps-distributed-optimization"
version = "0.4.8"
description = "RPS-driven diagnostically robust distributed optimization (paper companion)"
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["__pycache__", ".pytest_cache", "_data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # 长行（部分注释/公式表达需要保留）
    "E741",   # ambiguous variable name (l, I, O)
    "E702",   # 单行多语句 (; 分隔)：个别短语句保留
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]   # 测试里偶尔留 unused 变量给断言读

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
# numpy 的 generic shape 类型推断在 1.21-2.x 都不稳定；
# 这两个类型常出现在 "Value of type _ShapeT_co? is not indexable" 报错里，
# 与实际运行行为无关，先全局降级。
disable_error_code = ["index"]
exclude = ["_data", "tests"]
warn_unused_ignores = false
