[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rps-distributed-optimization"
version = "0.4.8"
description = "RPS-driven diagnostically robust distributed optimization (paper companion)"
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["__pycache__", ".pytest_cache", "_data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # long lines (some comments / formula expressions are kept verbatim)
    "E741",   # ambiguous variable name (l, I, O)
    "E702",   # multiple statements on one line (";"-separated): a few short ones are kept
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]   # tests occasionally leave unused variables for asserts to read

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
# numpy's generic-shape type inference has been unstable across 1.21 - 2.x;
# the two error codes below most often surface as
# "Value of type _ShapeT_co? is not indexable", which has no bearing on
# actual runtime behavior, so we silence them globally.
disable_error_code = ["index"]
exclude = ["_data", "tests"]
warn_unused_ignores = false
